projects/bot_eval_run/batch_1770640212304/ts-todo-oracle_run_02/iterations/10/cmd_node_dist_cli.js_--help.stderr.txt
C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\batch_1770640212304\ts-todo-oracle_run_02\workspace\dist\cli.js:12
    console.log('Commands:, add < title > --data < path > Add, a, new task, list--, data < path > List, all, tasks, done < id > --data < path > Mark, a, task, remove < id > --data < path > Remove, a, task, ');, node_process_1.default.exit(0));
                                                                                                                                                                                                                 ^

SyntaxError: Unexpected token ','
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at Module._compile (node:internal/modules/cjs/loader:1735:20)
    at Object..js (node:internal/modules/cjs/loader:1893:10)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at Module.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:154:5)
    at node:internal/main/run_main_module:33:47

Node.js v24.12.0
